# eloify

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
src/eloify/: __init__.py  chart.py  cli.py  config.py  elo.py  engine.py  headshot.py  models.py  parse.py  sheets.py  validate.py
src/eloify/assets/headshots/: README.md  aaron.txt  alex-baraban.txt  alex-germain.txt  brinker.txt  christo.txt  duncan.txt  jeff.txt  liam-cune.txt  liam-fitz.txt  mark.txt  matt-port.txt  moseley.txt  naman.txt  noah.txt  pablo.txt  peter.txt  sampath.txt  shreshta.txt  soham.txt  yuki.txt
src/eloify/web/: __init__.py  __main__.py  app.py  charts.py  data.py
src/eloify/web/static/: style.css
src/eloify/web/templates/: _preview.html  base.html  board.html  error.html  game_new.html  headshot.html  history.html  last.html  models.html  odds.html  players.html
tests/: test_chart.py  test_elo.py  test_engine.py  test_headshot.py  test_models.py  test_parse.py  test_validate.py  test_web.py
